v0.5.1

v0.5.0 (10.06.20)
- use proper enums for vertex material shader properties
- create pivots for meshes on export if they have no parent bone
- create a bone for each hierarchy pivot on import (otherwise pivot order can not be maintained on roundtrip)
- reduced export time for meshes (O(n*n) -> O(n))
- handle empty/invalid/default materials correctly on export
- Bugfix: texture name got falsely '.dds' appended on export
- Bugfix: export proper opacity value of material (fixes invisible objects in W3DViewer)
- Bugfix: do not export uv coordinates if no texutre is used by the material
- Bugfix: fixed mesh triangulation on export
- Bugfix: use proper hierarchy name for animation and hlod on export

v0.4.7 (26.04.20)
- Bugfix: fixed installation issue

v0.4.6 (24.04.20)
- apply modifiers to meshes on export
- handle export of 'multi-user' meshes
- default material type is now 'VERTEX_MATERIAL'
- Bugfix: handle free vertices correctly
- Bugfix: handle already applied file extensions by user
- Bugfix: check for referenced armature case insensitive

v0.4.5 (11.03.20)
- split vertices with multiple uv coordinates on export
- use actual mesh normals on import
- export tangents and bitangents
- custom floating point visibility property for bones
- create armature for roottransform pivot
- Bugfix: parenting issue
- Bugfix: triangle distances
- Bugfix: proper bool string export

v0.4.4 (19.02.20)
- limit decimal digits in w3x files to 6
- Bugfix: use armature name as hierarchy ID
- Bugfix: create includes on export

v0.4.3 (13.02.20)
- create only required keyframes on animation import
- support more texture file formats
- Bugfix: bone visibility channels
- Bugfix: do not crash on missing float vector entries

v0.4.2 (04.02.20)
- switched to ElementTree for xml stuff
- Bugfix: write boolean values as lower in w3x
- Bugfix: loading of animations without include for corresponding hierarchy

v0.4.1 (01.02.20)
- support splitted w3x files
- support w3x single mesh imports